[package]
name = "shadow"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.6", features = ["derive"] }
windows-sys = { version = "0.52.0", features = ["Win32_Foundation", "Win32_Security", "Win32_Storage_FileSystem", "Win32_System_Diagnostics_Debug", "Win32_System_IO", "Win32_System_Memory", "Win32_System_Threading"] }
shared = { path = "../shared" }
log = "0.4.22"
env_logger = { version = "0.11.5" }
colored = "2.1.0"
chrono = "0.4.38"
sysinfo = "0.31.4"

[features]
mapper = [] 

[profile.release]
strip = true
opt-level = "z"
