[package]
name = "shadow-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.22"
colored = "2.1.0"
chrono = "0.4.38"
sysinfo = "0.31.4"
common = { path = "../common" }
env_logger = { version = "0.11.5" }
clap = { version = "4.5.6", features = ["derive"] }

[dependencies.windows-sys]
version = "0.59.0" 
features = [
    "Win32_Foundation", 
    "Win32_Security", 
    "Win32_Storage_FileSystem", 
    "Win32_System_Diagnostics_Debug", 
    "Win32_System_IO", "Win32_System_Memory", 
    "Win32_System_Threading"
]

[features]
mapper = [] 

[profile.release]
strip = true
opt-level = "z"
