[package]
name = "shadow"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wdk = "0.2.0"
wdk-alloc = "0.2.0"
wdk-panic = "0.2.0"
wdk-sys = "0.2.0"
winapi = "0.3.9"
ntapi = { version = "0.4.1", default-features = false }
shared = { path = "../shared" }
log = "0.4.21"
kernel-log = "0.1.3"
obfstr = "0.4.3"
spin = "0.9.8"
lazy_static = "1.5.0"
bitfield = "0.15.0"
hashbrown = "0.14.5"
microseh = { version = "1.0.3", default-features = false}

[build-dependencies]
wdk-build = "0.2.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[features]
mapper = [] 

[package.metadata.wdk.driver-model]
driver-type = "KMDF"
kmdf-version-major = 1
target-kmdf-version-minor = 33
