[package]
name = "shadow"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wdk-alloc = "0.2.0"
wdk-panic = "0.2.0"
wdk-sys = "0.2.0"
winapi = "0.3.9"
ntapi = { version = "0.4.1", default-features = false }

log = "0.4.21"
spin = "0.9.8"
obfstr = "0.4.3"
kernel-log = "0.1.3"
hashbrown = "0.14.5"
lazy_static = "1.5.0"
common = { path = "../crates/common" }
shadowx = { path = "../crates/shadowx" }

[build-dependencies]
wdk-build = "0.2.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[features]
mapper = [] 

[package.metadata.wdk.driver-model]
driver-type = "KMDF"
kmdf-version-major = 1
target-kmdf-version-minor = 33
