[workspace]
[package]
name = "shadow"
version = "0.1.0"
edition = "2021"
description = "Windows Kernel Rootkit in Rust"
license = "MIT"
repository = "https://github.com/joaoviictorti/shadow-rs"
homepage = "https://github.com/joaoviictorti/shadow-rs"
readme = "../README.md"
keywords = ["rootkit", "kernel", "windows", "rust"]
categories = ["os", "filesystem"]

[lib]
crate-type = ["cdylib"]

[dependencies]
wdk = "^0.3.0"
wdk-panic = "^0.3.0"
wdk-sys = "^0.3.0"
log = "0.4.22"
spin = "0.9.8"
obfstr = "0.4.3"
kernel-log = "0.1.3"
common = { path = "../common" }
shadowx = { path = "../shadowx" }

[build-dependencies]
wdk-build = "0.3.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[features]
mapper = [] 

[package.metadata.wdk.driver-model]
driver-type = "KMDF"
kmdf-version-major = 1
target-kmdf-version-minor = 31
