[package]
name = "shadowx"
version = "0.1.0"
edition = "2021"

[dependencies]
wdk = "0.2.0"
wdk-sys = "0.2.0"
wdk-panic = "0.2.0"
wdk-alloc = "0.2.0"
winapi = "0.3.9"
ntapi = { version = "0.4.1", default-features = false }

spin = "0.9.8"
log = "0.4.22"
obfstr = "0.4.4"
bitfield = "0.17.0"
thiserror-no-std = "2.0.2"
common = { path = "../common" }
microseh = { version = "1.1.2", default-features = false }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[package.metadata.wdk.driver-model]
driver-type = "KMDF"
kmdf-version-major = 1
target-kmdf-version-minor = 33
